# json-schema-idl

./: .gitignore  json-schema-idl.cabal
src/: Main.hs
src/Data/JSON/: Draft07.hs  Schema.hs  Validation.hs
test/: Main.hs
test/Data/JSON/Schema/: TestSuite.hs  UnitTests.hs
test/resources/: custom.json
