name:                json-schema-idl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/json-schema-idl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  -- main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , vector
                     , text
                     , scientific
                     , bytestring
                     , unordered-containers
                     , semigroupoids
                     , containers
                     , pcre-heavy
                     , mtl
                     , aeson-pretty
                     , network-uri
                     , hashable
                     , split
                     , safe

  ghc-options:         -fwarn-incomplete-patterns -Werror
  exposed-modules:     Data.JSON.Schema
                     , Data.JSON.Validation
                     , Data.JSON.Draft07

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , json-schema-idl
                     , tasty
                     , tasty-hunit
                     , aeson
                     , text
                     , vector
                     , containers
                     , unordered-containers
                     , pcre-heavy
                     , mtl

  other-modules:       Data.JSON.Schema.TestSuite
                     , Data.JSON.Schema.UnitTests
